Stop text overflowing blue box on smaller screens

--- a/style.css
+++ b/style.css
@@ -236,6 +236,7 @@ h3 {
     border-radius: 6px;
     height: 75px;
     width: 50%;
+    min-width: 600px;
     gap: 20px;
 }
 
